--- a/pages/layouting.html
+++ b/pages/layouting.html
@@ -21,12 +21,27 @@
     <form>
       <input type="text" placeholder="username" />
     </form>
-    <section>
+    <section class="position">
       <div class="box">static</div>
       <div class="box">relative</div>
       <div class="box">absolute</div>
       <div class="box">fixed</div>
       <div class="box">sticky</div>
+    </section>
+    <section class="flex">
+      <div class="box">1</div>
+      <div class="box">2</div>
+      <div class="box">3</div>
+      <div class="box">4</div>
+      <div class="box">5</div>
+    </section>
+    <section class="grid">
+      <div class="box">1</div>
+      <div class="box">2</div>
+      <div class="box">3</div>
+      <div class="box">4</div>
+      <div class="box">5</div>
+      <div class="box">6</div>
     </section>
   </body>
 </html>
